Tests for mixed interactions (snapshots and flooders), fixes