@@ -25,7 +25,7 @@ import com.republicate.json.Json;
 import org.ranflood.daemon.RanFlood;
 import org.ranflood.daemon.commands.Command;
 import org.ranflood.daemon.commands.FloodCommand;
-import org.ranflood.daemon.commands.RanFloodType;
+import org.ranflood.daemon.commands.types.RanFloodType;
 import org.ranflood.daemon.commands.SnapshotCommand;
 import org.ranflood.daemon.commands.transcoders.JSONTranscoder;
 import org.ranflood.daemon.commands.transcoders.ParseException;
@@ -37,59 +37,99 @@ import org.zeromq.ZMQ;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static org.ranflood.daemon.RanFloodLogger.log;
 
 public class TestDaemon {
 
-	public static void main( String[] args ) throws InterruptedException {
+	public static void main( String[] args ) throws InterruptedException, IOException, ParseException {
 
-//		String settings_file = Paths.get( "src/test/java/playground/settings.ini" ).toAbsolutePath().toString();
-//		RanFlood.main( new String[]{ settings_file } );
-//		Thread.sleep( 1000 );
+		String settings_file = Paths.get( "src/test/java/playground/settings.ini" ).toAbsolutePath().toString();
+		RanFlood.main( new String[]{ settings_file } );
+		Thread.sleep( 1000 );
+
+		Path folder1 = Path.of( "/Users/thesave/Desktop/ranflood_testsite/attackedFolder/folder1" );
+
+		// THIS MUST RETURN AN ERROR
 		sendCommand( new SnapshotCommand.Add(
-						new RanFloodType( FloodMethod.RANDOM,
-										Path.of( "/Users/thesave/Desktop/ranflood_testsite/attackedFolder/folder1" )
-						)
-		) );
+						new RanFloodType( FloodMethod.RANDOM, folder1 ) )
+		);
 		Thread.sleep( 1000 );
-		sendCommand( new FloodCommand.Start(
-						new RanFloodType(
-										FloodMethod.RANDOM,
-										Path.of( "/Users/thesave/Desktop/ranflood_testsite/attackedFolder/folder1" )
-						)
-		) );
-		Thread.sleep( 1000 );
-		sendString( "shutdown" );
-//		String id = sendCommandList( new FloodCommand.List() );
-//		sendCommand( new FloodCommand.Stop( id ) );
-//
-//		sendCommand( new SnapshotCommand.Add(
-//						new RanFloodType( FloodMethod.ON_THE_FLY,
-//										Path.of( "/Users/thesave/Desktop/ranflood_testsite/attackedFolder/folder2" )
-//						)
-//		) );
-//		Thread.sleep( 1000 );
-//		sendCommand( new FloodCommand.Start( F ) );
-//		Thread.sleep( 3000 );
 
+		// THIS SHOULD BE OK
+		sendCommand( new FloodCommand.Start(
+						new RanFloodType( FloodMethod.RANDOM, folder1 ) )
+		);
+		Thread.sleep( 1000 );
+
+		// THIS SHOULD BE OK
+		String runningList = sendCommandList( new FloodCommand.List() );
+		log( runningList );
+		List< RanFloodType.Tagged > list = parseFloodList( runningList );
+
+		// THIS SHOULD BE OK
+		sendCommand( new FloodCommand.Stop(
+						list.get( 0 ).method(),
+						list.get( 0 ).id()
+		) );
+		Thread.sleep( 1000 );
+
+		// THIS SHOULD BE OK
+		sendCommand( new SnapshotCommand.Add(
+						new RanFloodType( FloodMethod.ON_THE_FLY, folder1 )
+		) );
+		Thread.sleep( 1000 );
+
+		// THIS SHOULD RETURN THE SNAPSHOT WE MADE
+		log( sendCommandList( new SnapshotCommand.List() ) );
+		Thread.sleep( 1000 );
+
+		// THIS SHOULD BE OK
+		sendCommand( new FloodCommand.Start(
+						new RanFloodType( FloodMethod.ON_THE_FLY, folder1 )
+		) );
+		Thread.sleep( 1000 );
+
+		// THIS SHOULD BE OK
+		do {
+			log( "Retrieving list of running floods" );
+			runningList = sendCommandList( new FloodCommand.List() );
+			log( runningList );
+			list = parseFloodList( runningList );
+			Thread.sleep( 1000 );
+		} while ( list.isEmpty() );
+
+		// THIS SHOULD BE OK
+		sendCommand( new FloodCommand.Stop(
+						list.get( 0 ).method(),
+						list.get( 0 ).id()
+		) );
+		Thread.sleep( 1000 );
+
+		sendString( "shutdown" );
+
+//		Thread.sleep( 1000 );
 		//RanFlood.getDaemon().shutdown();
 	}
 
 	private static void sendCommand( Command< ? > c ) {
 		try {
-		sendString( JSONTranscoder.toJson( c ) );
+			sendString( JSONTranscoder.toJson( c ) );
 		} catch ( ParseException e ) {
 			e.printStackTrace();
 		}
 	}
 
-	private static void sendString( String s ){
+	private static void sendString( String s ) {
 		try ( ZContext context = new ZContext() ) {
-			System.out.println( "Sending request to server" );
 			ZMQ.Socket socket = context.createSocket( SocketType.REQ );
 			socket.connect( "tcp://localhost:7890" );
 			socket.send( s );
 			String response = new String( socket.recv(), ZMQ.CHARSET );
-			System.out.println( "Client received [" + response + "]" );
+			log( "Client received [" + response + "]" );
 			socket.close();
 			context.destroy();
 		}
@@ -97,7 +137,6 @@ public class TestDaemon {
 
 	private static String sendCommandList( Command< ? > c ) {
 		try ( ZContext context = new ZContext() ) {
-			System.out.println( "Sending request to server" );
 			ZMQ.Socket socket = context.createSocket( SocketType.REQ );
 			socket.connect( "tcp://localhost:7890" );
 			String command = JSONTranscoder.toJson( c );
@@ -105,11 +144,31 @@ public class TestDaemon {
 			String response = new String( socket.recv(), ZMQ.CHARSET );
 			socket.close();
 			context.destroy();
-			return Json.parse( response ).asObject().getArray( "list" ).getString( 0 );
-		} catch ( ParseException | IOException e ) {
+			return response;
+//			return Json.parse( response ).asObject().getArray( "list" ).getString( 0 );
+		} catch ( ParseException e ) {
 			e.printStackTrace();
 			return "";
 		}
+	}
+
+	private static List< RanFloodType.Tagged > parseFloodList( String list ) throws IOException {
+		Json.Object object = Json.parse( list ).asObject();
+		Json.Array array = object.getArray( "list" );
+		return IntStream.range( 0, array.size() )
+						.mapToObj( i -> {
+							Json.Object e = array.getObject( i );
+							try {
+								return new RanFloodType.Tagged(
+												FloodMethod.getMethod( e.getString( "method" ) ),
+												Path.of( e.getString( "path" ) ),
+												e.getString( "id" )
+								);
+							} catch ( ParseException parseException ) {
+								parseException.printStackTrace();
+								return null;
+							}
+						} ).collect( Collectors.toList() );
 	}
 
 }
